# cathugger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DiscordBot/: Bot.h  ImageRandomizer.h  main.cpp
data/: songs.json
docs/: index.html  privacy.html  style.css  terms.html
include/: bot.h  common.h  songs.h  utils.h
src/: bot.cpp  main.cpp  songs.cpp  utils.cpp
